Add some animations

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                         </h4>
 
                         <h1 class="mb-24 font14 nunito fluid4 fw-8 lh">
-                            Enjoy Your Home <br/>
-                             Totally Pest Free
+                            Enjoy Your Home <br />
+                            Totally Pest Free
                         </h1>
 
                         <div>
@@ -169,8 +169,8 @@
                         </h4>
 
                         <h1 class="mb-24 font14 nunito fluid4 fw-8 lh">
-                            Enjoy Your Home <br/>
-                             Totally Pest Free
+                            Enjoy Your Home <br />
+                            Totally Pest Free
                         </h1>
 
                         <div>
@@ -284,7 +284,7 @@
                             </h1>
                         </div>
                     </div>
-                    <div class="w-1 p-5">
+                    <div class="w-1 p-5 mb-24">
                         <div class="box">
                             <p class="fluid2 font6 open lh5 fw-4 text-justify text-justify">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiu smod tempor incididunt
@@ -293,7 +293,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="w-1 p- d-flex text-center jc">
+                    <div class="w-1 p- d-flex text-center jc mb-24">
                         <div class="p-10 w-4 pl xs-2">
                             <div class="box bg2 h-112 middle mb-5">
                                 <i class="font5 
@@ -392,8 +392,10 @@
                 <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
-                            <div class="services fluid1 font3 mb-15">
-                                <i class="fa-solid fa-spider"></i>
+                            <div class="services1 relative">
+                                <div class="services fluid1 font3 mb-15">
+                                    <i class="fa-solid fa-spider"></i>
+                                </div>
                             </div>
                         </div>
 
@@ -403,8 +405,12 @@
                             Lorem ipsum dolor sit amet consectetur adipisc elit sed.
                         </p>
 
-                        <button class="open bg3 bg2 font8 fw-4 border-radius50 p-3 border0">
+                        <button class="open fluid1 bg2 font8 fw-4 border-radius50 p-3 border0 relative overflow">
                             LEARN MORE
+
+                            <div class="open bg3 fluid3 font8 fw-4 border-radius50 p-3 border0 box11">
+                                LEARN MORE
+                            </div>
                         </button>
 
                     </div>
@@ -412,8 +418,10 @@
                 <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
-                            <div class="services fluid1 font3 mb-15">
-                                <i class="fa-solid fa-spider"></i>
+                            <div class="services1 relative">
+                                <div class="services fluid1 font3 mb-15">
+                                    <i class="fa-solid fa-spider"></i>
+                                </div>
                             </div>
                         </div>
 
@@ -423,8 +431,12 @@
                             Lorem ipsum dolor sit amet consectetur adipisc elit sed.
                         </p>
 
-                        <button class="open bg3 bg2 font8 fw-4 border-radius50 p-3 border0">
+                        <button class="open fluid1 bg2 font8 fw-4 border-radius50 p-3 border0 relative overflow">
                             LEARN MORE
+
+                            <div class="open bg3 fluid3 font8 fw-4 border-radius50 p-3 border0 box11">
+                                LEARN MORE
+                            </div>
                         </button>
 
                     </div>
@@ -432,8 +444,10 @@
                 <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
-                            <div class="services fluid1 font3 mb-15">
-                                <i class="fa-solid fa-spider"></i>
+                            <div class="services1 relative">
+                                <div class="services fluid1 font3 mb-15">
+                                    <i class="fa-solid fa-spider"></i>
+                                </div>
                             </div>
                         </div>
 
@@ -443,8 +457,12 @@
                             Lorem ipsum dolor sit amet consectetur adipisc elit sed.
                         </p>
 
-                        <button class="open bg3 bg2 font8 fw-4 border-radius50 p-3 border0">
+                        <button class="open fluid1 bg2 font8 fw-4 border-radius50 p-3 border0 relative overflow">
                             LEARN MORE
+
+                            <div class="open bg3 fluid3 font8 fw-4 border-radius50 p-3 border0 box11">
+                                LEARN MORE
+                            </div>
                         </button>
 
                     </div>
@@ -452,8 +470,10 @@
                 <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
-                            <div class="services fluid1 font3 mb-15">
-                                <i class="fa-solid fa-spider"></i>
+                            <div class="services1 relative">
+                                <div class="services fluid1 font3 mb-15">
+                                    <i class="fa-solid fa-spider"></i>
+                                </div>
                             </div>
                         </div>
 
@@ -463,9 +483,14 @@
                             Lorem ipsum dolor sit amet consectetur adipisc elit sed.
                         </p>
 
-                        <button class="open bg3 bg2 font8 fw-4 border-radius50 p-3 border0">
+                        <button class="open fluid1 bg2 font8 fw-4 border-radius50 p-3 border0 relative overflow">
                             LEARN MORE
+
+                            <div class="open bg3 fluid3 font8 fw-4 border-radius50 p-3 border0 box11">
+                                LEARN MORE
+                            </div>
                         </button>
+
 
                     </div>
                 </div>
